--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.18.2",
+    "glob": "^11.0.3",
     "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.1",
@@ -71,6 +72,7 @@
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.11.0",
+    "rimraf": "^6.0.1",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "sonner": "^2.0.7",
@@ -93,7 +95,7 @@
     "@types/react-dom": "^18.3.7",
     "@types/react-pdf": "^5.0.7",
     "autoprefixer": "^10.4.21",
-    "eslint": "^8.56.0",
+    "eslint": "^9.35.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.5.6",
     "prisma": "^6.14.0",
