--- a/package.json
+++ b/package.json
@@ -95,8 +95,8 @@
     "@types/react-dom": "^18.3.7",
     "@types/react-pdf": "^5.0.7",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.35.0",
-    "eslint-config-next": "14.1.0",
+  "eslint": "8.57.1",
+  "eslint-config-next": "14.1.0",
     "postcss": "^8.5.6",
     "prisma": "^6.14.0",
     "tailwindcss": "^3.4.17",
